# basedosdados-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  PUBLISH.md  README.md  basedosdados_backend_dump.txt  claude_desktop_config.example.json  debug_endpoints.py  dev_install.sh  install.sh  pyproject.toml  run_dev_server.sh  run_server.sh  server.py  smithery.yaml  test_bigquery_permissions.py  test_claude_tools.py  test_connection_simple.py  test_mcp_connection.py  test_mcp_fixed.py
.claude/: settings.local.json
.github/workflows/: release.yml
basedosdados_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/basedosdados_mcp/: __init__.py  bigquery_client.py  graphql_client.py  main.py  models.py  resources.py  server.py  tools.py  utils.py
src/basedosdados_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_bigquery_schema_investigation.py  test_claude_desktop_simulation.py  test_encoding_pytest.py  test_live_mcp_pytest.py  test_mcp_library_issue.py  test_response_wrapper.py  test_search_performance.py
